# heightmaprenderer

./: .gitignore  .gitmodules  00_conan_install.bat  01_cmake_generate.bat  CMakeLists.txt  build_and_run.bat  build_and_run.sh  conanfile.py
cmake/: CopyDllsForDebug.cmake  FindBGFX.cmake  heightmaprendererConfig.cmake.in
examples/: 02_test_render.cpp  03_test_heightmap.cpp  04_test_visual.cpp  CMakeLists.txt  basic_example.cpp  bgfx_example.cpp
include/heightmaprenderer/: export.h  heightmap_renderer.h
lib/: CMakeLists.txt
lib/include/terrain/: terrain.h
lib/src/: renderer.cpp  renderer_impl.cpp  renderer_impl.h
lib/src/internal/: context.cpp  context.h  heightmap_loader.cpp  heightmap_loader.h  simple_terrain.cpp  simple_terrain.h
lib/test/: test_basic.cpp
res/qml/: main.qml
res/runtime/shaders/dx11/: cs_generate_smap.bin.hlsl  cs_terrain_lod.bin.hlsl  fs_terrain_render.bin.hlsl  fs_terrain_render_normal.bin.hlsl  vs_terrain_render.bin.hlsl
scripts/: generate_run_scripts.cmake  setup_environment.bat.in  setup_environment.sh.in
src/: BGFXItem.cpp  BGFXItem.h  BGFXRenderNode.cpp  BGFXRenderNode.h  entry_stubs.cpp  heightmap_renderer.cpp  main.cpp  render_thread.cpp
src/adapters/: bgfx_adapter.cpp  bgfx_adapter.h
src/common/: camera.cpp
src/common/entry/: entry.cpp  entry.h  entry_qt.cpp  entry_qt.h  entry_windows.cpp  input.cpp
src/heightmap/: heightmap_app.h  heightmap_renderer.cpp  heightmap_renderer.h  patch_tables.cpp  patch_tables.h  types.h  uniforms.cpp  uniforms.h
src/quick/: bgfx_item.cpp  bgfx_item.h
src/renderer/: bgfx_renderer.cpp  bgfx_renderer.h
src/shaders/: cs_generate_smap.sc  cs_terrain_init.sc  fs_terrain_render.sc  terrain_common.sh  uniforms.sh  vs_terrain_render.sc
